     is an LTL formula.  In this case it returns and array of
     formulas.  If f represents a superset of the language of A, then
     any word accepted by A from state x satisfies V[x].  Related to
     Issue #591.

  Bug fixes:

  - Generating random formulas without any unary opertor would very
    often create formulas much smaller than specified.

New in spot 2.12  (2024-05-16)

  Build:

  - When Python bindings are enabled, Spot now requires Python 3.6 or
    later.  Python 3.6 has reached end-of-life in 2021, but is still
    used on CentOS 7 (which will reach end-of-support later in 2024).

  Documentation:

  - https://spot.lre.epita.fr/tut25.html is a new example showing
    how to print an automaton in the "BA format" (used by Rabbit
    and other tools).

  Command-line tools:

  - In places that accept format strings with '%' sequences, like
    options --stats, --name, or --output, the new '%l' can now be used
    to produce the 0-based serial number of the produced object.  This
    differs from the existing '%L' that is usually related to the line
    number of the input (when that makes sense).  For instance to
    split a file that contains many automata into one file per
    automaton, do

        autfilt input.hoa -o output-%l.hoa

  - For tools that produce automata, using -Hb or --hoa=b will produce
    an HOA file in which aliases are used to form a basis for the
    whole set of labels.  Those aliases are only used when more than
    one atomic proposition is used (otherwise, the atomic proposition
    and its negation is already a basis).  This can help reduce the
    size of large HOA files.

  - autfilt learned --separate-edges, to split the labels of
    the automaton using a basis of disjoint labels.  See
    https://spot.lre.epita.fr/tut25.html for some motivation.

  - autfilt learned --reduce-acceptance-set/--enlarge-acceptance-set
    to heurisitcally remove/add to unnecessary acceptance marks in
    Büchi automata.  (Issue #570)