@@ -76,6 +76,11 @@ New in spot 2.12.0.dev (not yet released)
   - Generating random formulas without any unary opertor would very
     often create formulas much smaller than specified.
 
+  - The parity game solver, which internally works on "parity max
+    odd", but actually accept any type of parity acceptance, could be
+    confused by games with "parity min" acceptance using transition
+    with several colors (a rather uncommon situation).
+
 New in spot 2.12  (2024-05-16)
 
   Build:
